# lecture_final

./: README.md  pyproject.toml
src/lecture_final/: __init__.py  train.py
tests/: test_train.py
