[project]
name = "lecture-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hang ZHU", email = "zhuhang19970828@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
lecture-final = "lecture_final:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
